<resources>
    <string name="app_name">DeLuna</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="mapa">Mapa</string>
    <string name="todas_las_asociaciones">Todas las asociaciones</string>
    <string name="asociaciones_cercanas">Asociaciones Cercanas</string>
    <string name="negocios">Asociaciones</string>
    <string name="ajustes">Ajustes</string>
    <string name="filtrar">Filtrar</string>
    <string name="turismo_consciente">Turismo Consciente</string>
    <string name="agricultura_regenerativa">Agricultura Regenerativa</string>
    <string name="medicina_tradicional">Medicina Tradicional</string>
    <string name="borrar_filtro">Borrar Filtro</string>
    <string name="bioconstrucci_n">Bioconstrucción</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="museo">Museo</string>
    <string name="ver_en_mapa">Ver en mapa</string>
    <string name="no_hay_ninguna_asociaci_n_a_menos_de_5_km">No hay ninguna asociación a menos de 5 km</string>
    <string name="listo">Listo</string>
    <string name="utilidades">Utilidades</string>
    <string name="convertir">Convertir</string>
    <string name="conversor_de_unidades">Conversor de unidades</string>
    <string name="conversor_de_divisas">Conversor de divisas</string>
    <string name="acerca_de">Acerca de</string>
    <string name="conversi_n_realizada_por_exchangerates">Conversión realizada por ExchangeRates</string>
</resources>