<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/item_1"
        android:icon="@drawable/vector"
        android:title="@string/turismo_consciente"
        app:showAsAction="withText" />
    <item
        android:id="@+id/item_2"
        android:title="@string/agricultura_regenerativa"
        app:showAsAction="withText" />
    <item
        android:id="@+id/item_3"
        android:title="@string/medicina_tradicional"
        app:showAsAction="withText" />
    <item
        android:id="@+id/item_4"
        android:title="@string/bioconstrucci_n"
        app:showAsAction="withText" />
    <item
        android:id="@+id/item_5"
        android:title="@string/borrar_filtro"
        app:showAsAction="withText" />
</menu>
