<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dashboard.DashboardFragment" >

    <ListView
        android:id="@+id/rvListaCompleta"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="55dp"
        android:divider="@drawable/gradient"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAsociaciones" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleX="1.5"
        android:src="@drawable/ellipse13"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvAsociacionesCercanas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:labelFor="@id/imageView"
        android:text="@string/asociaciones_cercanas"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvAsociaciones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="140dp"
        android:text="@string/todas_las_asociaciones"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNoAsociacionesCercanas" />

    <ListView
        android:id="@+id/rvListaCercana"
        android:layout_width="0dp"
        android:layout_height="280dp"
        android:layout_marginTop="20dp"
        android:divider="@drawable/gradient"
        android:hapticFeedbackEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAsociacionesCercanas" />

    <ImageView
        android:id="@+id/imgFiltrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:clickable="true"
        android:hapticFeedbackEnabled="true"
        android:scaleX="1.4"
        android:scaleY="1.5"
        android:src="@drawable/vector_filtrar"
        app:layout_constraintBottom_toBottomOf="@+id/tvAsociaciones"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvAsociaciones"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/tvNoAsociacionesCercanas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_hay_ninguna_asociaci_n_a_menos_de_5_km"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rvListaCercana" />

    <ImageView
        android:id="@+id/imgRefresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:clickable="true"
        android:src="@drawable/imgrefresh"
        app:layout_constraintBottom_toBottomOf="@+id/tvAsociacionesCercanas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvAsociacionesCercanas"
        app:layout_constraintTop_toTopOf="@+id/tvAsociacionesCercanas" />

</androidx.constraintlayout.widget.ConstraintLayout>