<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.notifications.NotificationsFragment" >

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleX="1.5"
        android:src="@drawable/ellipse13"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvAjustes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:labelFor="@id/imageView"
        android:text="@string/utilidades"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="2dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvConversorUnidades"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:paddingStart="5dp"
                android:text="@string/conversor_de_unidades"
                android:textSize="16sp"
                android:textStyle="bold" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp"
                app:cardCornerRadius="5dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <Spinner
                        android:id="@+id/spTipoUnidades"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <Spinner
                            android:id="@+id/spUnidadUno"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="15dp"
                            android:layout_weight="1" />

                        <Spinner
                            android:id="@+id/spUnidadDos"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_weight="1" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/edtNumber"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="5"
                            android:ems="5"
                            android:gravity="center"
                            android:inputType="number|numberDecimal"
                            android:maxLength="7"
                            android:numeric="decimal" />

                        <TextView
                            android:id="@+id/tvIgualSigno"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="="
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/tvRespuesta"
                            android:layout_width="30dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="10"
                            android:gravity="center"
                            android:maxLength="15"
                            android:textSize="20sp" />
                    </LinearLayout>

                    <Button
                        android:id="@+id/btnConvertir"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/convertir" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvConversorDivisas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:paddingStart="5dp"
                android:text="@string/conversor_de_divisas"
                android:textSize="16sp"
                android:textStyle="bold" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                app:cardCornerRadius="5dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <Spinner
                            android:id="@+id/spCurrencyUno"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />

                        <Spinner
                            android:id="@+id/spCurrencyDos"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/edtCurrency"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="5"
                            android:ems="5"
                            android:gravity="center"
                            android:inputType="number|numberDecimal"
                            android:maxLength="7" />

                        <TextView
                            android:id="@+id/textView6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="="
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/tvResultCurrency"
                            android:layout_width="30dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="10"
                            android:gravity="center"
                            android:maxLength="15"
                            android:textSize="20sp" />
                    </LinearLayout>

                    <Button
                        android:id="@+id/btnConvertirCurrency"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:text="@string/convertir" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <TextView
            android:id="@+id/tvInfoApi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/conversi_n_realizada_por_exchangerates" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>